@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1,SHA512
 
-1273f38838979f3937a1a1e3d2d25ed62d467ab6  15385 ChangeLog
+9da4e1b3fe3f4f518f284c6f86d136847cd75639  15435 ChangeLog
 1c2d983c7261aac7f3acb847892b9600de8c4307   2889 Makefile
 0e41821f4b60f3a227246d295e4c88017a5cb3ea  10193 configure
 4cc77b90af91e615a64ae04893fdffa7939db84c  18092 gpl-2.0.txt
@@ -22,22 +22,22 @@ eae1b0fb4deb0adbed4237bfbf7cea7022efa909   2373 misc/64.png
 c5ccf87f60b8039f34e8914edd866cce5564a3e4   1707 misc/manpage.1
 a83357473eb7c431a9f8e2813e02553d5ffa54b7    338 misc/showvte.1
 ea1f6883dbe4ed0be4c449dce6840dfb0807ea79  10473 src/config.h
-41425a65a9557681eed81129537b89115cc896b4 156768 src/evilvte.c
+da7a1dc6301dbb66021fb09340e264c047fb35a7 156870 src/evilvte.c
 8a3285012cd4cdffe4c9277ab8a308a8112b292c  15421 src/process.sh
 -----BEGIN PGP SIGNATURE-----
 
-iEYEARECAAYFAk9Uq6cACgkQdEpXpumNYVlVvgCcDgFUn/CN/gSSQ03/tPM8S6VW
-LikAn3fommYzod45hQYSY66oFndWw8fpiQIcBAEBCgAGBQJPVKunAAoJELc3H0m+
-i6gZr8IQAKMLuzErBiV8nE8oAsIOmepQpldZrfd2nGb13RV+KM41SClIOsx/Rkzb
-m1fO3JuRx4a9wLE8F9Fnajtf1d3QOevsiZT2YQliUqsm2F1y3KVAwfI9e2LfXzia
-sZbmh4gPWyzsj8ugV22DehAWcIhl/S3HPD3SUrEwd2QiarC7SuyFCOrXeWK259ci
-ZgqLUL7uP2AMbkw0eFmMb2S4KSJTDwg4N9o1wXMONAgG1Qadry4V/E5ioVP4bZ/U
-Xmcylne7yGIiVviN/mx/pUZCFdsIvNLT2+tHLncVKuMU/wqOX25oZ/e8kHTAhBzt
-cfOc1MsQgfPOeqv41DCMkxAfSfCDTzUzjYUXvJNdgvlG0DpgydJkJbiuV6fiTHJ/
-3JPDvmFURun+llQ8r3DV1Y8N9WRxzAbKZgyssiv3zKgdUGFYlkHVSHYC7Zg2XYJn
-QWdU6m5suGsZHqlvzKAcPbFjY/l0vXK6pjyDuemjbPuQ4n+tIMg7Vbmc6WJEi4/l
-Za62oGwPwLvYfHXUh+VwcvtXrZeTzWxAXEJ5u9x42360ZHIua1NLdonDbvjUISTQ
-ZWwdrIAn7uCOp47JGhQcpVJmpSrRyOpwXgkbP9kyqM53w/eMsbXddmUEUwNuPP5B
-GHRNTV6oNO/D1A6uuDGV8GvykYu9XTxc/iNbyOAJApbJy/nQpP2U
-=+QDz
+iEYEARECAAYFAk9UtNgACgkQdEpXpumNYVnezQCgg+pXVqhdGtYwAtkHEznr4/CO
+4gEAn0E0NEWWWsKkpyQG+kw8DTqFxW/AiQIcBAEBCgAGBQJPVLTYAAoJELc3H0m+
+i6gZSmkP/3dKX95Ejjaht0yszTvgaK1jVIH2cbj9l2/4mBD+x0pBVw1JLYwXqVMC
+QQeE+xUy+k4x6LlCGpIQkuJqABnMDKJGbMBXP8F09ExD0p2ff3Joj2VCMykUbmXJ
+kiYP8f72fBjmNvDmHY9mQL0DuDTiexNaOImZHKBPWMLR8ugZe7yv9/RcLTtaoVYZ
+O072PAC89j0W8iGQDCOy0TQolpRsK71r3a3+zvhB93oN+GV1EL1OIvdS6Qtp0nAv
+TU4iRORLnxbAHs29Cmg7jbTxmCpm/bAIOEG88JJvuk2MS8C2ELgGZnmXMCU08Pot
+FrQNW1sTpXdYhSrG3nfoIT/uStkDb8I+2ThJ0ALVO37E9NyUgGz2FqhziZBZg0Ge
+5byv9UzWAKDvTxBCJldTzYDBzjsiC/IoDOM97D939pEIENZ0JEIPvFDsSw4zI+4C
+iHERus8caOAWVepe7ZQR3KErdr5fhZfOmSmJtI7dN20FSF5VCx30pUC8w1Czji4Q
+nr2jHuRV6hBFy+jEod7wAyP26ZE0Ez3P/EWuQZPZNsZhbHksStAztPhEK2KDfRI8
+Vj0A72eatIdyzWqDskZ6mDqsafWLUfzCCmjZoax+ErbhxWJli7aZ+k96SDoQ/r64
+ZyoHZM19XDNBvwMDw1KW7zLgSfFIao87g1ixXaRXbMqPhybBhu4x
+=vrp7
 -----END PGP SIGNATURE-----
